# ai-helper

./: .clinerules  .env.example  .gitignore  README.md  config.py  drawing.py  frame_processing.py  main.py  model_responses.py  processing_thread.py  pyproject.toml  requirements.txt
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
