[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-helper"
version = "0.1.0"
description = "A computer vision application that uses Google's Gemini AI to analyze and answer questions in real-time"
authors = [
    { name = "Pratham Dubey", email = "prathamdby@users.noreply.github.com" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=1.5.0",
    "openai>=1.65.4",
    "opencv-python>=4.11.0.86",
    "python-dotenv>=1.0.1",
]

[project.urls]
Repository = "https://github.com/prathamdby/ai-helper"

[tool.hatch.build.targets.wheel]
packages = ["."]
